Fixing layout problems

--- a/css/style.css
+++ b/css/style.css
@@ -68,7 +68,6 @@ h4 {
   margin-bottom: 40px;
   border: 1px solid #ddd;
   overflow: hidden;
-  word-break: break-all;
   word-wrap: break-word;
   -webkit-border-radius: 4px 4px 4px 4px;
      -moz-border-radius: 4px 4px 4px 4px;
